# c_pipe

./: .gitmodules  CMakeLists.txt  Makefile  README.md
include/c_pipe/: as_reader.h  as_writer.h  chan.h  pipe.h
src/: as_reader.c  as_writer.c  chan.c  main.c  pipe.c
tests/: test_chan.c  test_pipe.c
